# unitysvc-sellers

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  mkdocs.yml  openapi.json  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: api-reference.md  claude-code-skill.md  cli-guide.md  cli-reference.md  code-examples.md  data-structure.md  documenting-services.md  file-schemas.md  getting-started.md  index.md  naming-conventions.md  pricing.md  sdk-guide.md  sdk-reference.md  seller-lifecycle.md  service-templates.md  service-types.md  services.md  usage.md  workflows.md
docs/dev-notes/: params-file-instantiation.md
docs/guides/: author-specs.md  catalog-extras.md  create-from-template.md  generate-catalog.md  operate-services.md  param-files.md
docs/tech-notes/: user-access-interface-template.md
scripts/: dump_spec.py  generate_cli_reference.sh  generate_client.sh  openapi-python-client.yml
skills/writing-unitysvc-services/: SKILL.md
src/unitysvc_sellers/: __init__.py  _cli_upload.py  _experimental.py  _http.py  _spec_version.py  aclient.py  adocuments.py  afiles.py  agroups.py  ainstances.py  apromotions.py  asecrets.py  aservices.py  atasks.py  atemplates.py  billing_verify.py  cli.py  client.py  data.py  documents.py  example.py  exceptions.py  files.py  format_data.py  groups.py  instances.py  list.py  model_data.py  params_render.py  populate.py  promotions.py  secrets.py  services.py  specs.py  specs_layout.py  storage.py  tasks.py  template_populate.py  templates.py  upload.py  (+2 more)
src/unitysvc_sellers/_generated/: __init__.py  client.py
src/unitysvc_sellers/_generated/models/: __init__.py  access_interface_public.py  access_interface_public_customer_secrets_optional_type_0_item.py  access_interface_public_request_transformer_type_0.py  access_interface_public_request_transformer_type_0_additional_property_type_0.py  access_interface_public_response_rules_type_0.py  access_interface_public_response_rules_type_0_additional_property_type_0.py  access_interface_public_routing_key_type_0.py  access_interfaces_public.py  access_method_enum.py  account_file_object.py  account_file_upload_ticket.py  account_file_upload_ticket_fields.py  action_code_create.py  action_code_create_extra_data_type_0.py  action_code_public.py  action_code_public_extra_data_type_0.py  action_code_status.py  action_code_type.py  action_codes_public.py  admin_promotion_create.py  admin_promotion_create_pricing.py  admin_promotion_create_scope_type_0.py  admin_promotion_update.py  admin_promotion_update_pricing_type_0.py  aggregation_period.py  announcement_set.py  api_key_validation_request.py  attach_payment_method_request.py  attach_payment_method_response.py  (+432 more)
src/unitysvc_sellers/commands/: _helpers.py  files.py  groups.py  instances.py  params.py  promotions.py  secrets.py  services.py  templates.py  tests.py
src/unitysvc_sellers/resources/: adocuments.py  agroups.py  apromotions.py  asecrets.py  aservices.py  atasks.py  documents.py  groups.py  promotions.py  secrets.py  services.py  tasks.py  upload.py
tests/: __init__.py  test_aclient.py  test_billing_verify.py  test_client.py  test_example.py  test_experimental.py  test_files.py  test_format_data.py  test_generated_secret_public.py  test_generated_service_group_public.py  test_model_data.py  test_params_cli.py  test_params_render.py  test_preset_expansion.py  test_secrets_cli.py  test_services_from_data.py  test_services_local_ids.py  test_services_noop_submit.py  test_services_run_tests_name.py  test_services_run_tests_payload.py  test_services_show_channels.py  test_services_show_test.py  test_specs.py  test_specs_expand.py  test_submit_and_mark_pending.py  test_submit_run_tests.py  test_tasks.py  test_template_populate.py  test_upload_resolver.py  test_utils.py  test_validator.py
tests/example_data/provider1/: provider.toml
tests/example_data/provider2/: provider.json
(+84 files in other folders)
